--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["kf.zhang <kf.zhang@shunwang.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.12.4"
+python = "^3.8"
 setuptools = "^71.1.0"
 wheel = "^0.43.0"
 jstyleson = "^0.0.2"
