--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,11 @@
 [tool.poetry]
 name = "vpdbz"
-version = "0.3.0"
+version = "0.4.0"
 description = "Python debug configuration generator for vscode"
 authors = ["kf.zhang <kf.zhang@shunwang.com>"]
 readme = "README.md"
+repository = "https://github.com/zhangkaifang/vpdbz"
+keywords = ["vscode", "debug", "launch.json", "vpdbz"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
