--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "vpdbz"
 version = "0.5.0"
 description = "Python debug configuration generator for vscode"
-authors = ["kf.zhang <kf.zhang@shunwang.com>"]
+authors = ["kf.zhang <devinzhang1994@163.com>"]
 readme = "README.md"
 repository = "https://github.com/zhangkaifang/vpdbz"
 keywords = ["vscode", "debug", "launch.json", "vpdbz"]
